--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -56,7 +56,7 @@
   padding-bottom: 12px;
 }
 .heading-bg{
-	background: #094692;
+	background: #1A6F13;
 	border-bottom: 1px solid #000;
 }
 .heading-bg .line{
